figmatized Highlight section

--- a/src/styles/client-themes.css
+++ b/src/styles/client-themes.css
@@ -254,7 +254,7 @@
   --color-primary-950: #030924;
 
   /* Secondary color - Gold/Yellow */
-  --color-secondary-50: #fffbeb;
+  --color-secondary-50: #F3F2F3;
   --color-secondary-100: #fef3c7;
   --color-secondary-200: #fde68a;
   --color-secondary-300: #E8D183;
