--- a/src/components/sections/AgitationSection.astro
+++ b/src/components/sections/AgitationSection.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<section id="agitation" class="mb-16">
+<section id="agitation" class="">
   <div class="container mx-auto px-4">
     <div class="max-w-6xl mx-auto">
       <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 items-center">
