fixed svg files

--- a/src/components/sections/PricingSection.astro
+++ b/src/components/sections/PricingSection.astro
@@ -1,5 +1,8 @@
 ---
 // Pricing section component for the landing page
+import { Image } from 'astro:assets';
+import bulletListSvg from '../../assets/bullet-list.svg';
+import bulletListBlueSvg from '../../assets/bullet-list-blue.svg';
 ---
 
 <section id="pricing" class="py-20 bg-primary-900">
@@ -29,31 +32,31 @@
         <div class="p-6">
           <ul class="space-y-4">
             <li class="flex items-start">
-              <img src="/src/assets/bullet-list.svg" alt="Bullet" class="h-6 w-6 mr-2 flex-shrink-0" />
+              <Image src={bulletListSvg} alt="Bullet" width={24} height={24} class="h-6 w-6 mr-2 flex-shrink-0" />
               <span class="text-white">Bookkeeping for startups</span>
             </li>
             <li class="flex items-start">
-              <img src="/src/assets/bullet-list.svg" alt="Bullet" class="h-6 w-6 mr-2 flex-shrink-0" />
+              <Image src={bulletListSvg} alt="Bullet" width={24} height={24} class="h-6 w-6 mr-2 flex-shrink-0" />
               <span class="text-white">Monthly close and reconciliations</span>
             </li>
             <li class="flex items-start">
-              <img src="/src/assets/bullet-list.svg" alt="Bullet" class="h-6 w-6 mr-2 flex-shrink-0" />
+              <Image src={bulletListSvg} alt="Bullet" width={24} height={24} class="h-6 w-6 mr-2 flex-shrink-0" />
               <span class="text-white">Accounting system implementation</span>
             </li>
             <li class="flex items-start">
-              <img src="/src/assets/bullet-list.svg" alt="Bullet" class="h-6 w-6 mr-2 flex-shrink-0" />
+              <Image src={bulletListSvg} alt="Bullet" width={24} height={24} class="h-6 w-6 mr-2 flex-shrink-0" />
               <span class="text-white">Balance sheet supporting schedules</span>
             </li>
             <li class="flex items-start">
-              <img src="/src/assets/bullet-list.svg" alt="Bullet" class="h-6 w-6 mr-2 flex-shrink-0" />
+              <Image src={bulletListSvg} alt="Bullet" width={24} height={24} class="h-6 w-6 mr-2 flex-shrink-0" />
               <span class="text-white">Onboarding in &lt;30 days</span>
             </li>
             <li class="flex items-start text-white/80">
-              <img src="/src/assets/bullet-list-blue.svg" alt="Bullet" class="h-6 w-6 mr-2 flex-shrink-0 opacity-50" />
+              <Image src={bulletListBlueSvg} alt="Bullet" width={24} height={24} class="h-6 w-6 mr-2 flex-shrink-0 opacity-50" />
               <span>Fractional CFO strategy</span>
             </li>
             <li class="flex items-start text-white/80">
-              <img src="/src/assets/bullet-list-blue.svg" alt="Bullet" class="h-6 w-6 mr-2 flex-shrink-0 opacity-50" />
+              <Image src={bulletListBlueSvg} alt="Bullet" width={24} height={24} class="h-6 w-6 mr-2 flex-shrink-0 opacity-50" />
               <span>Modeling or audit prep</span>
             </li>
           </ul>
@@ -77,27 +80,27 @@
         <div class="p-6">
           <ul class="space-y-4">
             <li class="flex items-start">
-              <img src="/src/assets/bullet-list.svg" alt="Bullet" class="h-6 w-6 mr-2 flex-shrink-0" />
+              <Image src={bulletListSvg} alt="Bullet" width={24} height={24} class="h-6 w-6 mr-2 flex-shrink-0" />
               <span class="text-white">Everything in Get Clean</span>
             </li>
             <li class="flex items-start">
-              <img src="/src/assets/bullet-list.svg" alt="Bullet" class="h-6 w-6 mr-2 flex-shrink-0" />
+              <Image src={bulletListSvg} alt="Bullet" width={24} height={24} class="h-6 w-6 mr-2 flex-shrink-0" />
               <span class="text-white">Scenario planning & forecasting</span>
             </li>
             <li class="flex items-start">
-              <img src="/src/assets/bullet-list.svg" alt="Bullet" class="h-6 w-6 mr-2 flex-shrink-0" />
+              <Image src={bulletListSvg} alt="Bullet" width={24} height={24} class="h-6 w-6 mr-2 flex-shrink-0" />
               <span class="text-white">Cost optimization & vendor strategy</span>
             </li>
             <li class="flex items-start">
-              <img src="/src/assets/bullet-list.svg" alt="Bullet" class="h-6 w-6 mr-2 flex-shrink-0" />
+              <Image src={bulletListSvg} alt="Bullet" width={24} height={24} class="h-6 w-6 mr-2 flex-shrink-0" />
               <span class="text-white">HR/payroll coordination</span>
             </li>
             <li class="flex items-start">
-              <img src="/src/assets/bullet-list.svg" alt="Bullet" class="h-6 w-6 mr-2 flex-shrink-0" />
+              <Image src={bulletListSvg} alt="Bullet" width={24} height={24} class="h-6 w-6 mr-2 flex-shrink-0" />
               <span class="text-white">Systems & workflow automation</span>
             </li>
             <li class="flex items-start text-white/80">
-              <img src="/src/assets/bullet-list-blue.svg" alt="Bullet" class="h-6 w-6 mr-2 flex-shrink-0 opacity-50" />
+              <Image src={bulletListBlueSvg} alt="Bullet" width={24} height={24} class="h-6 w-6 mr-2 flex-shrink-0 opacity-50" />
               <span>Dedicated CFO</span>
             </li>
           </ul>
@@ -120,27 +123,27 @@
         <div class="p-6 bg-accent-970">
           <ul class="space-y-4">
             <li class="flex items-start">
-              <img src="/src/assets/bullet-list.svg" alt="Bullet" class="h-6 w-6 mr-2 flex-shrink-0" />
+              <Image src={bulletListSvg} alt="Bullet" width={24} height={24} class="h-6 w-6 mr-2 flex-shrink-0" />
               <span class="text-white">Everything in Get Clarity</span>
             </li>
             <li class="flex items-start">
-              <img src="/src/assets/bullet-list.svg" alt="Bullet" class="h-6 w-6 mr-2 flex-shrink-0" />
+              <Image src={bulletListSvg} alt="Bullet" width={24} height={24} class="h-6 w-6 mr-2 flex-shrink-0" />
               <span class="text-white">Full finance, HR, and ops execution</span>
             </li>
             <li class="flex items-start">
-              <img src="/src/assets/bullet-list.svg" alt="Bullet" class="h-6 w-6 mr-2 flex-shrink-0" />
+              <Image src={bulletListSvg} alt="Bullet" width={24} height={24} class="h-6 w-6 mr-2 flex-shrink-0" />
               <span class="text-white">Dedicated CFO-level partner</span>
             </li>
             <li class="flex items-start">
-              <img src="/src/assets/bullet-list.svg" alt="Bullet" class="h-6 w-6 mr-2 flex-shrink-0" />
+              <Image src={bulletListSvg} alt="Bullet" width={24} height={24} class="h-6 w-6 mr-2 flex-shrink-0" />
               <span class="text-white">Fundraising & investor narrative support</span>
             </li>
             <li class="flex items-start">
-              <img src="/src/assets/bullet-list.svg" alt="Bullet" class="h-6 w-6 mr-2 flex-shrink-0" />
+              <Image src={bulletListSvg} alt="Bullet" width={24} height={24} class="h-6 w-6 mr-2 flex-shrink-0" />
               <span class="text-white">Audit & compliance prep</span>
             </li>
             <li class="flex items-start">
-              <img src="/src/assets/bullet-list.svg" alt="Bullet" class="h-6 w-6 mr-2 flex-shrink-0" />
+              <Image src={bulletListSvg} alt="Bullet" width={24} height={24} class="h-6 w-6 mr-2 flex-shrink-0" />
               <span class="text-white">Hiring & team planning support</span>
             </li>
           </ul>
