--- a/src/components/sections/ServicesSection.astro
+++ b/src/components/sections/ServicesSection.astro
@@ -1,5 +1,6 @@
 ---
-
+import { Image } from 'astro:assets';
+import bulletListSvg from '../../assets/bullet-list.svg';
 ---
 
 <section id="services" class="bg-secondary-50">
@@ -31,25 +32,31 @@
         </p>
         <ul class="space-y-2 text-primary-900">
           <li class="flex items-start">
-            <img
-              src="/src/assets/bullet-list.svg"
+            <Image
+              src={bulletListSvg}
               alt="Bullet"
+              width={24}
+              height={24}
               class="h-6 w-6 mr-2 flex-shrink-0"
             />
             <span>Strategic financial planning</span>
           </li>
           <li class="flex items-start">
-            <img
-              src="/src/assets/bullet-list.svg"
+            <Image
+              src={bulletListSvg}
               alt="Bullet"
+              width={24}
+              height={24}
               class="h-6 w-6 mr-2 flex-shrink-0"
             />
             <span>Investor-ready reporting</span>
           </li>
           <li class="flex items-start">
-            <img
-              src="/src/assets/bullet-list.svg"
+            <Image
+              src={bulletListSvg}
               alt="Bullet"
+              width={24}
+              height={24}
               class="h-6 w-6 mr-2 flex-shrink-0"
             />
             <span>Burn rate optimization</span>
@@ -77,25 +84,31 @@
         </p>
         <ul class="space-y-2 text-primary-900">
           <li class="flex items-start">
-            <img
-              src="/src/assets/bullet-list.svg"
+            <Image
+              src={bulletListSvg}
               alt="Bullet"
+              width={24}
+              height={24}
               class="h-6 w-6 mr-2 flex-shrink-0"
             />
             <span>Accurate financial statements</span>
           </li>
           <li class="flex items-start">
-            <img
-              src="/src/assets/bullet-list.svg"
+            <Image
+              src={bulletListSvg}
               alt="Bullet"
+              width={24}
+              height={24}
               class="h-6 w-6 mr-2 flex-shrink-0"
             />
             <span>Streamlined month-end close</span>
           </li>
           <li class="flex items-start">
-            <img
-              src="/src/assets/bullet-list.svg"
+            <Image
+              src={bulletListSvg}
               alt="Bullet"
+              width={24}
+              height={24}
               class="h-6 w-6 mr-2 flex-shrink-0"
             />
             <span>Dedicated accounting team</span>
@@ -123,25 +136,31 @@
         </p>
         <ul class="space-y-2 text-primary-900">
           <li class="flex items-start">
-            <img
-              src="/src/assets/bullet-list.svg"
+            <Image
+              src={bulletListSvg}
               alt="Bullet"
+              width={24}
+              height={24}
               class="h-6 w-6 mr-2 flex-shrink-0"
             />
             <span>Streamlined onboarding</span>
           </li>
           <li class="flex items-start">
-            <img
-              src="/src/assets/bullet-list.svg"
+            <Image
+              src={bulletListSvg}
               alt="Bullet"
+              width={24}
+              height={24}
               class="h-6 w-6 mr-2 flex-shrink-0"
             />
             <span>Compliance management</span>
           </li>
           <li class="flex items-start">
-            <img
-              src="/src/assets/bullet-list.svg"
+            <Image
+              src={bulletListSvg}
               alt="Bullet"
+              width={24}
+              height={24}
               class="h-6 w-6 mr-2 flex-shrink-0"
             />
             <span>Payroll administration</span>
@@ -169,25 +188,31 @@
         </p>
         <ul class="space-y-2 text-primary-900">
           <li class="flex items-start">
-            <img
-              src="/src/assets/bullet-list.svg"
+            <Image
+              src={bulletListSvg}
               alt="Bullet"
+              width={24}
+              height={24}
               class="h-6 w-6 mr-2 flex-shrink-0"
             />
             <span>System integration</span>
           </li>
           <li class="flex items-start">
-            <img
-              src="/src/assets/bullet-list.svg"
+            <Image
+              src={bulletListSvg}
               alt="Bullet"
+              width={24}
+              height={24}
               class="h-6 w-6 mr-2 flex-shrink-0"
             />
             <span>Process automation</span>
           </li>
           <li class="flex items-start">
-            <img
-              src="/src/assets/bullet-list.svg"
+            <Image
+              src={bulletListSvg}
               alt="Bullet"
+              width={24}
+              height={24}
               class="h-6 w-6 mr-2 flex-shrink-0"
             />
             <span>Automated reporting</span>
@@ -215,25 +240,31 @@
         </p>
         <ul class="space-y-2 text-primary-900">
           <li class="flex items-start">
-            <img
-              src="/src/assets/bullet-list.svg"
+            <Image
+              src={bulletListSvg}
               alt="Bullet"
+              width={24}
+              height={24}
               class="h-6 w-6 mr-2 flex-shrink-0"
             />
             <span>Audit preparation</span>
           </li>
           <li class="flex items-start">
-            <img
-              src="/src/assets/bullet-list.svg"
+            <Image
+              src={bulletListSvg}
               alt="Bullet"
+              width={24}
+              height={24}
               class="h-6 w-6 mr-2 flex-shrink-0"
             />
             <span>Regulatory compliance</span>
           </li>
           <li class="flex items-start">
-            <img
-              src="/src/assets/bullet-list.svg"
+            <Image
+              src={bulletListSvg}
               alt="Bullet"
+              width={24}
+              height={24}
               class="h-6 w-6 mr-2 flex-shrink-0"
             />
             <span>Data room organization</span>
@@ -261,25 +292,31 @@
         </p>
         <ul class="space-y-2 text-primary-900">
           <li class="flex items-start">
-            <img
-              src="/src/assets/bullet-list.svg"
+            <Image
+              src={bulletListSvg}
               alt="Bullet"
+              width={24}
+              height={24}
               class="h-6 w-6 mr-2 flex-shrink-0"
             />
             <span>Financial modeling</span>
           </li>
           <li class="flex items-start">
-            <img
-              src="/src/assets/bullet-list.svg"
+            <Image
+              src={bulletListSvg}
               alt="Bullet"
+              width={24}
+              height={24}
               class="h-6 w-6 mr-2 flex-shrink-0"
             />
             <span>Investor deck preparation</span>
           </li>
           <li class="flex items-start">
-            <img
-              src="/src/assets/bullet-list.svg"
+            <Image
+              src={bulletListSvg}
               alt="Bullet"
+              width={24}
+              height={24}
               class="h-6 w-6 mr-2 flex-shrink-0"
             />
             <span>Scenario planning</span>
