--- a/src/components/sections/ValueComparisonSection.astro
+++ b/src/components/sections/ValueComparisonSection.astro
@@ -1,5 +1,6 @@
 ---
-
+import { Image } from 'astro:assets';
+import divisorSvg from '../../assets/divisor.svg';
 ---
 
 <section
@@ -76,7 +77,7 @@
 
         <!-- Row Divider -->
         <div class="flex justify-center my-4">
-          <img src="/src/assets/divisor.svg" alt="Divider" class="w-full" />
+          <Image src={divisorSvg} alt="Divider" width={1200} height={2} class="w-full" />
         </div>
 
         <!-- Resources Row -->
@@ -90,7 +91,7 @@
 
         <!-- Row Divider -->
         <div class="flex justify-center my-4">
-          <img src="/src/assets/divisor.svg" alt="Divider" class="w-full" />
+          <Image src={divisorSvg} alt="Divider" width={1200} height={2} class="w-full" />
         </div>
 
         <!-- Expertise Row -->
@@ -104,7 +105,7 @@
 
         <!-- Row Divider -->
         <div class="flex justify-center my-4">
-          <img src="/src/assets/divisor.svg" alt="Divider" class="w-full" />
+          <Image src={divisorSvg} alt="Divider" width={1200} height={2} class="w-full" />
         </div>
 
         <!-- Flexibility Row -->
@@ -120,7 +121,7 @@
 
         <!-- Row Divider -->
         <div class="flex justify-center my-4">
-          <img src="/src/assets/divisor.svg" alt="Divider" class="w-full" />
+          <Image src={divisorSvg} alt="Divider" width={1200} height={2} class="w-full" />
         </div>
 
         <!-- Onboarding Row -->
